--- a/.env
+++ b/.env
@@ -31,3 +31,15 @@ APP_SECRET=b59690895b097d1483952be7473fee77
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:localhost@127.0.0.1:3306/db_name?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> google/recaptcha ###
+# To use Google Recaptcha, you must register a site on Recaptcha's admin panel:
+# https://www.google.com/recaptcha/admin
+GOOGLE_RECAPTCHA_SITE_KEY=
+GOOGLE_RECAPTCHA_SECRET=
+###< google/recaptcha ###
+
+###> excelwebzone/recaptcha-bundle ###
+EWZ_RECAPTCHA_SITE_KEY=
+EWZ_RECAPTCHA_SECRET=
+###< excelwebzone/recaptcha-bundle ###
