--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,6 +9,9 @@ security:
         main:
             anonymous: lazy
             provider: users_in_memory
+            guard:
+                authenticators:
+                    - App\Security\AdminAuthenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
