--- a/procfile
+++ b/procfile
@@ -1,1 +1,1 @@
-web: $(composer config bin-dir)/heroku-php-apache2 public/
+echo 'web: $(composer config bin-dir heroku-php-apache2 public/' > Procfile
