--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@
 #
 # DO NOT DEFINE PRODUCTION SECRETS IN THIS FILE NOR IN ANY OTHER COMMITTED FILES.
 #
-# Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
+# Run "composer dump-env dev" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
@@ -29,7 +29,7 @@ APP_SECRET=b59690895b097d1483952be7473fee77
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure &your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL='mysql://root:root@127.0.0.1:8889/Tomorrowdreams',
+DATABASE_URL=mysql://root:root@127.0.0.1:8889/inventory
 ###< doctrine/doctrine-bundle ###
 
 ###> google/recaptcha ###
