--- a/config/routes/api_platform_admin.yaml
+++ b/config/routes/api_platform_admin.yaml
@@ -1,5 +1,5 @@
 admin:
-    path: /admin
+    path: /api
     controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
     defaults:
-        template: admin.html.twig
+        template: api.html.twig
