--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,6 +1,7 @@
 vich_uploader:
     db_driver: orm
-    mappings:
-        post_thumbnails: 
-            uri_prefix: '%upload_path%'
-            upload_destination: '%kernel.project_dir%/public/%upload_path%'
+
+    #mappings:
+    #    products:
+    #        uri_prefix: /images/products
+    #        upload_destination: '%kernel.project_dir%/public/images/products'
