[Semantical Error] The annotation @Doctrine\ORM\Mapping\colums in class

--- a/config/packages/Admin/Entitis/Post.yaml
+++ b/config/packages/Admin/Entitis/Post.yaml
@@ -1,5 +1,9 @@
 easy_admin:
-  entities:
-     class: App\Entity\Post
+   entities:
+    form:
+        class: App\Entity\Post
+        form:
+        fields:
+            - {property: 'image', type: 'file'}
      
         
