error with @Doctrine\ORM\Mapping\Columns

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     google_recaptcha_site_key: '%env(GOOGLE_RECAPTCHA_SITE_KEY)%'
-    upload_path: '/upload/files/'
+    uploads_path: '/uploads/files/'
 services:
     # default configuration for services in *this* file
     _defaults:
