--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ APP_SECRET=b59690895b097d1483952be7473fee77
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure &your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:roo@127.0.0.1:8889/inventory
+DATABASE_URL=mysql://root:root@127.0.0.1:8889/inventory
 ###< doctrine/doctrine-bundle ###
 
 ###> google/recaptcha ###
