[Semantical Error] The annotation @DoctrineORMMappingcolums in class App\Entity\Post was never imported. Did you maybe forget to add a use statement for this annotation?

--- a/config/packages/Admin/Entitis/Post.yaml
+++ b/config/packages/Admin/Entitis/Post.yaml
@@ -1,9 +1,9 @@
-easy_admin:
-   entities:
+easy_admin: 
+   entities: 
     form:
-        class: App\Entity\Post
-        form:
+        class: Doctrine\ORM\Mapping\colums
+        form: 
         fields:
             - {property: 'image', type: 'file'}
-     
+            
         
