--- a/config/packages/Admin/config.yaml
+++ b/config/packages/Admin/config.yaml
@@ -1,7 +1,10 @@
 easy_admin:
-      site_name: 'Tomorrowdreams'
+      site_name: 'TomorrowDreams'
       entities:
         - App\Entity\Category
         - App\Entity\Music
         - App\Entity\Post
         - App\Entity\Upload
+
+
+        
